Fix spacing between CharacterUnit and PartyDetails

--- a/components/CharacterUnit/index.scss
+++ b/components/CharacterUnit/index.scss
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     gap: calc($unit / 2);
+    min-height: 320px;
     max-width: 200px;
+    margin-bottom: $unit * 4;
 
     &.editable .CharacterImage:hover {
         border: $hover-stroke;
